# ctboost

./: .gitignore  BACKLOG.md  CMakeLists.txt  README.md  agent.md  pyproject.toml  run_kaggle_kernel_session.py  run_kaggle_yx_benchmark_session.py
.github/workflows/: cmake.yml  publish.yml
build-ci-312/: Makefile  _core.exp  cmake_install.cmake
build-manual/: Makefile  _core.exp  cmake_install.cmake
ctboost/: __init__.py  _export.py  _prepared_data_support.py  _serialization.py  _version.py  core.py  distributed.py  export_codegen.py  export_payload.py  export_runtime.py  feature_pipeline.py  prepared_data.py  sklearn.py  training.py
ctboost/core/: __init__.py  _handle.py  normalization.py  pool.py  ranking_metadata.py  sparse.py
ctboost/distributed/: __init__.py  __main__.py  merge.py  payloads.py  server.py  tcp.py
ctboost/sklearn/: __init__.py  _fit.py  _params.py  _predict.py  base.py  classifier.py  labels.py  ranker.py  regressor.py  serialization.py
ctboost/training/: __init__.py  _booster_schema.py  _distributed_config.py  _distributed_payloads.py  _distributed_pool.py  _distributed_runtime.py  _distributed_storage_io.py  _distributed_storage_merge.py  _early_stopping.py  _eval_runtime.py  _eval_sets.py  _learning_rate_schedule.py  _pool_build.py  _train_metrics.py  _train_native.py  _train_params.py  _train_python.py  api.py  booster.py  callbacks.py  distributed.py  eval_metrics.py  pool_io.py  resume.py  schema.py  weights.py
cuda/: cuda_backend.cu  hist_kernels.cu  hist_kernels.cuh
demo/: README.md  kaggle_house_prices.py  kaggle_titanic.py
include/ctboost/: booster.hpp  build_info.hpp  cuda_backend.hpp  data.hpp  distributed_client.hpp  feature_pipeline.hpp  histogram.hpp  metric.hpp  objective.hpp  profiler.hpp  ranking.hpp  statistics.hpp  tree.hpp
src/bindings/: module.cpp  module_arrays.cpp  module_internal.hpp  module_registration.cpp  module_registration_booster.cpp  module_registration_booster_accessors.cpp  module_registration_booster_state.cpp  module_registration_pipeline.cpp  module_registration_pool.cpp  module_state.cpp  module_state_booster.cpp
src/core/: booster.cpp  booster_accessors.cpp  booster_constructor.cpp  booster_distributed.cpp  booster_fit.cpp  booster_fit_internal.hpp  booster_fit_iteration.cpp  booster_fit_loop.cpp  booster_fit_metrics.cpp  booster_fit_multiclass.cpp  booster_fit_single_output.cpp  booster_fit_support.cpp  booster_internal.hpp  booster_predict.cpp  booster_prediction.cpp  booster_sampling.cpp  booster_state.cpp  booster_tokens.cpp  booster_tree_updates.cpp  build_info.cpp  cuda_backend_stub.cpp  data.cpp  data_dense.cpp  data_internal.hpp  data_metadata.cpp  data_validation.cpp  feature_pipeline.cpp  feature_pipeline_fit.cpp  feature_pipeline_fit_core.cpp  feature_pipeline_fit_ctr.cpp  feature_pipeline_internal.hpp  feature_pipeline_normalize.cpp  feature_pipeline_state.cpp  feature_pipeline_state_load.cpp  feature_pipeline_state_support.cpp  feature_pipeline_transform.cpp  histogram.cpp  histogram_builder.cpp  histogram_builder_support.cpp  histogram_internal.hpp  (+36 more)
tests/: helpers.py  run_installed_smoke.py  test_booster.py  test_booster_constraints.py  test_booster_sampling.py  test_booster_training_basics.py  test_build.py  test_build_info.py  test_cv.py  test_data_and_loss.py  test_debug_histogram.py  test_distributed_collectives.py  test_distributed_training_dense.py  test_distributed_training_filesystem.py  test_distributed_training_ranking.py  test_distributed_training_raw_pipeline.py  test_eval_metrics.py  test_explainability_and_warm_start.py  test_export.py  test_feature_pipeline_persistence.py  test_gpu_wheel_smoke.py  test_learning_rate_controls.py  test_loss_gradients.py  test_metrics_and_objectives.py  test_missing_values.py  test_multiclass.py  test_objective_families.py  test_persistence_and_cv.py  test_persistence_booster.py  test_persistence_classifier.py  test_pool_data.py  test_ranking.py  test_sklearn.py  test_sklearn_basic.py  test_sklearn_distributed.py  test_sklearn_feature_pipeline.py  test_snapshot_resume.py  test_sparse_input.py  test_statistics.py  test_weights.py  (+1 more)
