[build-system]
requires = [
  "pybind11>=2.12",
  "scikit-build-core>=0.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "ctboost"
version = "0.1.0a0"
description = "Conditional boosting with conditional inference trees and C++/CUDA backends"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "CTBoost Contributors" },
]
dependencies = [
  "numpy>=1.24",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.version = ">=3.24"
build-dir = "build/{wheel_tag}"
wheel.packages = ["ctboost"]
sdist.include = [
  "CMakeLists.txt",
  "README.md",
  "ctboost/**",
  "cuda/**",
  "include/**",
  "src/**",
  "tests/**",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
