[build-system]
requires = [
  "pybind11>=2.12",
  "scikit-build-core>=0.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "ctboost"
version = "0.1.0"
description = "A GPU-accelerated gradient boosting library using Conditional Inference Trees."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "CTBoost Contributors" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "scikit-learn>=1.3",
]

[project.urls]
Homepage = "https://github.com/captnmarkus/ctboost"
Repository = "https://github.com/captnmarkus/ctboost"
Issues = "https://github.com/captnmarkus/ctboost/issues"

[project.optional-dependencies]
dev = [
  "pandas",
  "pytest>=8.0",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.version = ">=3.24"
build-dir = "build/{wheel_tag}"
wheel.packages = ["ctboost"]
sdist.include = [
  "CMakeLists.txt",
  "README.md",
  "ctboost/**",
  "cuda/**",
  "include/**",
  "src/**",
  "tests/**",
]

[tool.cibuildwheel]
build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*"]
skip = ["pp*", "*i686"]
environment = "CMAKE_ARGS='-DCTBOOST_ENABLE_CUDA=OFF'"
test-requires = ["pytest", "scikit-learn", "numpy", "pandas"]
test-command = "pytest {project}/tests"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
