[build-system]
requires = [
  "pybind11>=2.12,<3",
  "scikit-build-core>=0.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "ctboost"
version = "0.1.40"
description = "A GPU-accelerated gradient boosting library using Conditional Inference Trees."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "CTBoost Contributors" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/captnmarkus/ctboost"
Repository = "https://github.com/captnmarkus/ctboost"
Issues = "https://github.com/captnmarkus/ctboost/issues"

[project.optional-dependencies]
sklearn = [
  "scikit-learn>=1.3",
]
dev = [
  "pandas",
  "pytest>=8.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.version = ">=3.24"
build-dir = "build/{wheel_tag}"
wheel.packages = ["ctboost"]
sdist.include = [
  "CMakeLists.txt",
  "README.md",
  "ctboost/**",
  "cuda/**",
  "include/**",
  "src/**",
  "tests/**",
]

[tool.cibuildwheel]
build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*"]
skip = ["*-musllinux_*"]
dependency-versions = "pinned"
build-verbosity = 1
test-requires = ["pytest", "scikit-learn>=1.3"]
test-command = "python -X faulthandler -m pytest {project}/tests/test_wheel_smoke.py -q"

[tool.cibuildwheel.config-settings]
"cmake.define.CTBOOST_ENABLE_CUDA" = "OFF"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
skip = ["cp38-*", "cp39-*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
